[build-system]
requires = ['setuptools>=77.0.3', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'mqtt_publisher'
requires-python = '>=3.10.1'
description = 'A simple MQTT publisher'

dependencies = [
    'paho-mqtt<2.0.0'
]

dynamic = ['version']

[tools.setuptools.packages.find]
where = ['src']

[project.scripts]
mqtt-pub = "mqtt_publisher.app:publish_room_temp"